fix button alignment

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,9 @@
   justify-content: space-between;
   position: absolute;
   top: 50%;
+  tranform: translateY(
+    -50%
+  ); /*centers and takes into acount height of the button*/
 }
 
 .btn {
